src/objects/ADvendio__Placement__c.object
<CustomObject>
    <fields>
        <fullName>ADvendio__AGOF_ID__c</fullName>
        <description>The AGOF ID is a unique placement id assigned by the AGOF.</description>
        <inlineHelpText>The AGOF ID is a unique placement id assigned by the AGOF.</inlineHelpText>
        <label>AGOF ID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ADvendio__AccountPayable__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Payable</label>
        <referenceTo>ADvendio__AccountPayable__c</referenceTo>
        <relationshipLabel>Placements</relationshipLabel>
        <relationshipName>Placements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADvendio__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>In the AdSpecs &amp; Rates Manager, Inventory &amp; Rates Manager, Content Wizard, Booking Calendar and AGOF Connect, only active marked records will be available.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__AdServer_Keywords_Key_Values__c</fullName>
        <label>AdServer Keywords/Key-Values</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__External_Name__c</fullName>
        <description>Enter the placement&apos;s name for external use. This value is shown on the quote.</description>
        <inlineHelpText>Enter the placement&apos;s name for external use. This value is shown on the quote.</inlineHelpText>
        <label>External Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__KeyValues__c</fullName>
        <description>Here you can enter keys and values which are not shown on the documents and appear not in the Media Configuration.
This Informationen will be directly submitted to the AdServer at checking availability booking a MediaCampaign and there Campaign Items to the AdServer.</description>
        <inlineHelpText>Here you can enter keys and values which are not shown on the documents and appear not in the Media Configuration.
This Informationen will be directly submitted to the AdServer at checking availability, booking a Campaign Items to the AdServer.</inlineHelpText>
        <label>KeyValues</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ADvendio__MediaSegment__c</fullName>
        <description>Selected Media Segment controls e.g. functions and assignment information in Media Search, AdMaterial Management and in Commitments.</description>
        <inlineHelpText>Please chose the relevant Media Segment for this Placement.</inlineHelpText>
        <label>Media Segment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ADvendio__MediaSegment</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__Placement_KeyID__c</fullName>
        <displayFormat>{0000}</displayFormat>
        <label>Placement_KeyID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>ADvendio__Placement_Shortform__c</fullName>
        <description>Enter a short form for the placement. This field is for internal use only.</description>
        <inlineHelpText>Enter a short form for the placement. This field is for internal use only.</inlineHelpText>
        <label>Placement_Shortform</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__Product_search_Name__c</fullName>
        <description>Enter how this placement is to be displayed in the product search.</description>
        <inlineHelpText>Enter how this placement is to be displayed in the product search.</inlineHelpText>
        <label>Product search Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__RateCategory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select the Rate Category for this placement. Rate categories can be used to group placements. You can define a rate category &quot;Run of Network&quot; where you group all run-of-network placements. With the help of this criteria rates can be easily mass updated.</inlineHelpText>
        <label>Rate Category</label>
        <referenceTo>ADvendio__RateCategory__c</referenceTo>
        <relationshipLabel>Placements</relationshipLabel>
        <relationshipName>Placements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADvendio__Site__c</fullName>
        <description>Enter the site assigned to this placement.</description>
        <inlineHelpText>Enter the site assigned to this placement.</inlineHelpText>
        <label>Site</label>
        <referenceTo>ADvendio__Site__c</referenceTo>
        <relationshipLabel>Placements</relationshipLabel>
        <relationshipName>Placements</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ADvendio__UniqueKey__c</fullName>
        <description>Enter a UniqueKey (recommended: syntax) for this placement.</description>
        <externalId>true</externalId>
        <inlineHelpText>Enter a UniqueKey (recommended: syntax) for this placement.</inlineHelpText>
        <label>UniqueKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Mig_ADvendio_AdServer_ID_LookupKorrekt__c</fullName>
        <formula>IF(SomDig_AdServerID__r.Mig_ADvendio_AdServer_ID__c==SomDig_AdunitPlacment__c , true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mig_ADvendio__AdServer_ID_LookupKorrekt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mig_Info__c</fullName>
        <description>INSERT: von ProDia importiert
UPDATE: von ProDia Änderungen übernommen
DELETE: nicht in ProDia vorhanden, kann evtl. gelöscht werden
NOT_CHANGED: in ProDia und SF identisch, kein Update</description>
        <inlineHelpText>INSERT: von ProDia importiert
UPDATE: von ProDia Änderungen übernommen
DELETE: nicht in ProDia vorhanden, kann evtl. gelöscht werden
NOT_CHANGED: in ProDia und SF identisch, kein Update</inlineHelpText>
        <label>Migration_Info</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mig_IstMoi__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mig_IstMoi</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mig_ProdiaKey__c</fullName>
        <description>Eindeutiger Schlüssel aus ProDia, der für Abgleich bei Migrataion benötigt wird</description>
        <externalId>true</externalId>
        <inlineHelpText>Eindeutiger Schlüssel aus ProDia, der für Abgleich bei Migrataion benötigt wird</inlineHelpText>
        <label>Mig_ProdiaKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>P7S1_IdOld__c</fullName>
        <description>Salesforce ID aus einer anderen/alten Org imRahmen einer Datenmigration</description>
        <inlineHelpText>Salesforce ID aus einer anderen/alten Org imRahmen einer Datenmigration</inlineHelpText>
        <label>P7S1_IdOld</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomDig_AdServerID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AdServer ID</label>
        <referenceTo>ADvendio__AdServer_ID__c</referenceTo>
        <relationshipLabel>Placements</relationshipLabel>
        <relationshipName>Placements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SomDig_AdunitPlacment__c</fullName>
        <description>temporär zur Erstellung der Produktmatrix</description>
        <inlineHelpText>temporär zur Erstellung der Produktmatrix</inlineHelpText>
        <label>Adunit-Placment</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomDig_AntizipationsVS__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Antizipationsverteilungsschlüssel</label>
        <referenceTo>SomDig_AntizipationsVS__c</referenceTo>
        <relationshipLabel>Belegungseinheiten</relationshipLabel>
        <relationshipName>SomDig_Belegungseinheiten</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SomDig_Auftragstypen__c</fullName>
        <description>temporär zur Erstellung der Produktmatrix</description>
        <inlineHelpText>temporär zur Erstellung der Produktmatrix</inlineHelpText>
        <label>Auftragstypen</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AdAudience</fullName>
                </value>
                <value>
                    <fullName>Barter</fullName>
                </value>
                <value>
                    <fullName>Eigenvermarktung</fullName>
                </value>
                <value>
                    <fullName>Eigenwerbung</fullName>
                </value>
                <value>
                    <fullName>Forschung</fullName>
                </value>
                <value>
                    <fullName>Performance</fullName>
                </value>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Standby</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SomDig_BT__c</fullName>
        <defaultValue>false</defaultValue>
        <description>temporär zur Erstellung der Produktmatrix</description>
        <inlineHelpText>temporär zur Erstellung der Produktmatrix</inlineHelpText>
        <label>BT fähig</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SomDig_CpxFaehig__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Temporär zur Erstellung der Produktmatrix</description>
        <inlineHelpText>Temporär zur Erstellung der Produktmatrix</inlineHelpText>
        <label>CPX fähig</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SomDig_FC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>temporär zur Erstellung der Produktmatrix</description>
        <inlineHelpText>temporär zur Erstellung der Produktmatrix</inlineHelpText>
        <label>FC fähig</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SomDig_GtFaehig__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GT fähig</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SomDig_Mediagattungssegment__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Mediagattungs-Segment</label>
        <referenceTo>SomDig_MediagattungsSegment__c</referenceTo>
        <relationshipLabel>Belegungseinheiten</relationshipLabel>
        <relationshipName>Belegungseinheiten</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SomDig_Multiscreen__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Kennzeichnet eine Multiscreen Belegungseinheit.</description>
        <inlineHelpText>Kennzeichnet eine Multiscreen Belegungseinheit.</inlineHelpText>
        <label>Multiscreen</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SomDig_OtpFaehig__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Temporär zur Erstellung der Produktmatrix</description>
        <inlineHelpText>Temporär zur Erstellung der Produktmatrix</inlineHelpText>
        <label>OTP fähig</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SomDig_Rotationstyp__c</fullName>
        <description>Ordnet eine Belegungseinheit (früher Marktsegment) einem Typ zu. Dies ist u.a. wichtig für die korrekte Ermittlung der Inventarklassen bei Werbemittel/Produkten welche diese Belegungseinehiet nutzen.</description>
        <inlineHelpText>Ordnet eine Belegungseinheit (früher Marktsegment) einem Typ zu. Dies ist u.a. wichtig für die korrekte Ermittlung der Inventarklassen bei Werbemittel/Produkten welche diese Belegungseinehiet nutzen.</inlineHelpText>
        <label>Rotationstyp</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Brand-Rotation</fullName>
                </value>
                <value>
                    <fullName>Network-Rotation</fullName>
                </value>
                <value>
                    <fullName>Site-Rotation</fullName>
                </value>
                <value>
                    <fullName>Themen-Rotation</fullName>
                </value>
                <value>
                    <fullName>TV-Brand-Rotation</fullName>
                </value>
                <value>
                    <fullName>Umfeld</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SomDig_TT__c</fullName>
        <defaultValue>false</defaultValue>
        <description>temporär zur Erstellung der Produktmatrix</description>
        <inlineHelpText>temporär zur Erstellung der Produktmatrix</inlineHelpText>
        <label>TT fähig</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SomDig_TkpFaehig__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Temporär zur Erstellung der Produktmatrix</description>
        <inlineHelpText>Temporär zur Erstellung der Produktmatrix</inlineHelpText>
        <label>TKP fähig</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SomDig_Typ__c</fullName>
        <description>Welchem Netzwerk gehört diese Belegungseinheit an?</description>
        <inlineHelpText>Welchem Netzwerk gehört diese Belegungseinheit an? Achtung dies hat Einfluss auf Auslieferungstyp und Priomodell.</inlineHelpText>
        <label>Netzwerk-Typ</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>71m intern</fullName>
                    <default>true</default>
                    <label>71m intern</label>
                </value>
                <value>
                    <fullName>YouTube</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SomDig_UGC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Ist diese Belegungseinheit UGC relevant?</description>
        <inlineHelpText>Ist diese Belegungseinheit UGC relevant?</inlineHelpText>
        <label>ist UGC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SomDig_iAdFaehig__c</fullName>
        <defaultValue>false</defaultValue>
        <description>temporär zur Erstellung der Produktmatrix</description>
        <inlineHelpText>temporär zur Erstellung der Produktmatrix</inlineHelpText>
        <label>iAd fähig</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SomDig_oldRotationstyp__c</fullName>
        <description>temporär zur Erstellung der Produktmatrix</description>
        <inlineHelpText>temporär zur Erstellung der Produktmatrix</inlineHelpText>
        <label>old Rotationstyp</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Network-Rotation</fullName>
                </value>
                <value>
                    <fullName>Premium-Umfeld</fullName>
                </value>
                <value>
                    <fullName>Rotation TV-Brand</fullName>
                </value>
                <value>
                    <fullName>Site-Rotation</fullName>
                </value>
                <value>
                    <fullName>Standard-Umfeld</fullName>
                </value>
                <value>
                    <fullName>Themenrotationen</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Targeting_Provider__c</fullName>
        <description>Zusammenfassung von Keys zu einer Gruppe, welche über einen technischen Dienstleister/Site/Seitenbetreiber zur Verfügung gestellt werden können. Vereinfacht die Zuordnung von mehreren Keys zu Werbemittel/Produkten.</description>
        <inlineHelpText>Zusammenfassung von Keys zu einer Gruppe, welche über einen technischen Dienstleister/Site/Seitenbetreiber zur Verfügung gestellt werden können. Vereinfacht die Zuordnung von mehreren Keys zu Werbemittel/Produkten.</inlineHelpText>
        <label>Targeting Provider</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>ATV_PBT</fullName>
                </value>
                <value>
                    <fullName>Autosites</fullName>
                </value>
                <value>
                    <fullName>Diverse Kriterien</fullName>
                </value>
                <value>
                    <fullName>Gesundheit.de</fullName>
                </value>
                <value>
                    <fullName>nugg.ad</fullName>
                </value>
                <value>
                    <fullName>nugg.ad InApp</fullName>
                </value>
                <value>
                    <fullName>Rotationsausschluss</fullName>
                </value>
                <value>
                    <fullName>SmartGeo</fullName>
                </value>
                <value>
                    <fullName>Vereinssites</fullName>
                </value>
                <value>
                    <fullName>wetter.com</fullName>
                </value>
                <value>
                    <fullName>wetter.com CTV</fullName>
                </value>
                <value>
                    <fullName>ZG S71 Paket</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Placement</label>
    <listViews>
        <fullName>Antizip</fullName>
        <columns>NAME</columns>
        <columns>SomDig_AntizipationsVS__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SomDig_AntizipationsVS__c</field>
            <operation>equals</operation>
        </filters>
        <label>Antizip</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Multiscreen</fullName>
        <columns>NAME</columns>
        <columns>ADvendio__Site__c</columns>
        <columns>ADvendio__RateCategory__c</columns>
        <columns>SomDig_UGC__c</columns>
        <columns>SomDig_Typ__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Mig_ProdiaKey__c</columns>
        <columns>SomDig_Mediagattungssegment__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SomDig_Multiscreen__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Multiscreen</label>
        <language>de</language>
        <sharedTo>
            <group>P7S1_SphereSomDe</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>NonAdserver</fullName>
        <columns>NAME</columns>
        <columns>SomDig_Mediagattungssegment__c</columns>
        <columns>SomDig_Auftragstypen__c</columns>
        <columns>ADvendio__Placement_Shortform__c</columns>
        <columns>ADvendio__Product_search_Name__c</columns>
        <columns>ADvendio__Site__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>nonadserver</value>
        </filters>
        <label>NonAdserver</label>
        <language>de</language>
    </listViews>
    <listViews>
        <fullName>SomDig_AlleBelegungseinheiten</fullName>
        <columns>NAME</columns>
        <columns>ADvendio__Site__c</columns>
        <columns>ADvendio__RateCategory__c</columns>
        <columns>SomDig_UGC__c</columns>
        <columns>SomDig_Typ__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Mig_ProdiaKey__c</columns>
        <filterScope>Everything</filterScope>
        <label>Alle Belegungseinheiten</label>
        <language>de</language>
        <sharedTo>
            <group>P7S1_SphereSomDe</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Teletext_Belegungseinheiten</fullName>
        <columns>NAME</columns>
        <columns>SomDig_Auftragstypen__c</columns>
        <columns>ADvendio__Placement_Shortform__c</columns>
        <columns>ADvendio__Product_search_Name__c</columns>
        <columns>ADvendio__Site__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SomDig_Mediagattungssegment__c</field>
            <operation>equals</operation>
            <value>Text</value>
        </filters>
        <label>Teletext Belegungseinheiten</label>
        <language>de</language>
    </listViews>
    <listViews>
        <fullName>ohne_Mediagattungs_Segment</fullName>
        <columns>NAME</columns>
        <columns>SomDig_Auftragstypen__c</columns>
        <columns>ADvendio__Placement_Shortform__c</columns>
        <columns>ADvendio__Product_search_Name__c</columns>
        <columns>ADvendio__Site__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SomDig_Mediagattungssegment__c</field>
            <operation>equals</operation>
        </filters>
        <label>ohne Mediagattungs-Segment</label>
        <language>de</language>
    </listViews>
    <nameField>
        <label>Placement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Placements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>SomDig_KontrolleErsteller</fullName>
        <active>true</active>
        <description>Für den Belegungsplan/Festplazierungsliste benötigen Sales &amp; PAM die Objekt-Berechtigung, Datensätze zu erstellen. Da dies Sales/PAM nicht machen soll, wurde diese Validierung noch erstellt (KV 01797).</description>
        <errorConditionFormula>$Profile.Id != $Label.ProfileIdAdmin

&amp;&amp;

ISNEW()

&amp;&amp; 
(
$Profile.Name = &quot;SomDig_Sales&quot;
 || 
$Profile.Name = &quot;SomDig_PAM&quot;
 || 
$Profile.Name = &quot;SomDig_BI&quot;)</errorConditionFormula>
        <errorMessage>Sales/PAM darf keine Datensätze des Objektes Belegungseinheit erstellen.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SomDig_NameDoubleBlank</fullName>
        <active>true</active>
        <description>KV 03291. Keine doppelten Leerzeichen in den Feldern Name, Kurzform, externe Bezeichnung und Produktsuche.</description>
        <errorConditionFormula>CONTAINS(Name, &apos;  &apos;) || CONTAINS(ADvendio__Placement_Shortform__c, &apos;  &apos;) || CONTAINS(ADvendio__External_Name__c, &apos;  &apos;) || CONTAINS(ADvendio__Product_search_Name__c, &apos;  &apos;)</errorConditionFormula>
        <errorMessage>Keine doppelten Leerzeichen in den Feldern Name, Kurzform, externe Bezeichnung und Produktsuche.</errorMessage>
    </validationRules>
</CustomObject>